# mqds

./: .gitignore  .travis.sh  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  README  README.md
docs/: Doxyfile.in  README.md  _c_make_fortran_compiler_id_8_f.html  _r_e_a_d_m_e_8md.html  binaries.html  calculate__equilibrium__site_8f90.html  calculate__equilibrium__site__mpi_8f90.html  calculate__ipldm__redmat_8f90.html  calculate__ipldm__redmat__mpi_8f90.html  calculate__pldm__absorption_8f90.html  calculate__pldm__absorption__mpi_8f90.html  calculate__pldm__nonlinear_8f90.html  calculate__pldm__nonlinear__mpi_8f90.html  calculate__pldm__redmat_8f90.html  calculate__pldm__redmat__mpi_8f90.html  calculate__sqc__absorption_8f90.html  calculate__sqc__absorption__mpi_8f90.html  calculate__sqc__redmat_8f90.html  calculate__sqc__redmat__mpi_8f90.html  calculate__twa__redmat_8f90.html  calculate__twa__redmat__mpi_8f90.html  dir_084de99258c86da8579a0528610e94b8.html  dir_1eb786074e7cedcf38a24df2f430978c.html  dir_27f05e6be832a6c0289022ac56ad3280.html  dir_35dad70e5380b376cfbba439649d8e94.html  dir_3e69ef25fd2cd09abff0f55c33f09153.html  dir_4d6413bb9171156619bdc44aedf443a4.html  dir_4deca7539d3fbcb7bf60d3afa7ba46db.html  dir_614f7091e4e46dfbd8d3e205cfae8d8d.html  dir_63772b626f2709090f0bdca0f40827b4.html  dir_65ffd306b347001a972de723a21234b0.html  dir_6ad5c1a76ca474d2bcdcf68a729f2497.html  dir_6f673fd785e60beb206a0ee7faf360aa.html  dir_704f4d90c8897e01b72ddc00a12b5bf7.html  dir_74f872feb4ed262426ea45a43a833c82.html  dir_7f7e439ba0927089503219129b4cf038.html  dir_a2e442be46752db3b9b9d62eb7a5f3a5.html  dir_a9012540a8a4b1e77398e7354e7a2a1c.html  dir_d2167dfe657f981340eaf13b86f29ffc.html  dir_e3f3519893071e034fd4fb0b56e2c98d.html  (+68 more)
docs/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_15.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_f.js  defines_0.js  defines_1.js  files_0.js  files_1.js  files_2.js  files_4.js  files_5.js  files_6.js  files_7.js  files_8.js  files_9.js  files_a.js  files_b.js  files_d.js  functions_0.js  functions_1.js  functions_10.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  (+32 more)
dox/: Doxyfile.in  README.md  equilibrium_info.dox  input_file_info.dox  mapping_variables.dox  pldm_info.dox  sqc_info.dox  twa_info.dox
html/: _r_e_a_d_m_e_8md.html  calculate__ipldm__redmat__mpi_8f90.html  calculate__sqc__absorption_8f90.html  calculate__sqc__redmat__mpi_8f90.html  calculate__twa__redmat_8f90.html  dir_4d6413bb9171156619bdc44aedf443a4.html  dir_4deca7539d3fbcb7bf60d3afa7ba46db.html  dir_614f7091e4e46dfbd8d3e205cfae8d8d.html  dir_704f4d90c8897e01b72ddc00a12b5bf7.html  dir_a2e442be46752db3b9b9d62eb7a5f3a5.html  dir_e3f3519893071e034fd4fb0b56e2c98d.html  fourier__transform_8f90.html  globals.html  harmonic__bath_8f90.html  index.html  mpi__variables_8f90.html  namespacefocusing.html  namespacekinds.html  namespacemembers_func.html  namespacewindows.html  pldm__master__mpi_8f90.html  twa__master_8f90.html  unit__conversions_8f90.html
mqds/: CMakeLists.txt  README.md
mqds/src/: CMakeLists.txt  Makefile  calculate_pldm_absorption.f90  calculate_pldm_redmat.f90  calculate_sqc_absorption.f90  calculate_twa_redmat.f90  hamiltonians.mod  harmonic_bath.f90  harmonic_bath.mod  input_output.f90  input_output.mod  kinds.f90  kinds.mod  main.f90  mapping_variables.f90  mapping_variables.mod  parameters.f90  parameters.mod  pldm_master.f90  random_numbers.f90  random_numbers.mod  spectroscopy.f90  sqc_master.f90  test.f90  twa_master.f90  unit_conversions.f90  unit_conversions.mod  windows.f90
mqds/src/analysis_src/: CMakeLists.txt  fourier_transform.f90
mqds/src/equilibrium_src/: CMakeLists.txt  calculate_equilibrium_site.f90  equilibrium_master.f90
mqds/src/general_src/: CMakeLists.txt  focusing.f90  fourier.f90  hamiltonians.f90  harmonic_bath.f90  imaginary_time.f90  input_output.f90  kinds.f90  linear_algebra.f90  mapping_variables.f90  parameters.f90  random_numbers.f90  spectroscopy.f90  unit_conversions.f90  windows.f90
mqds/src/ipldm_src/: CMakeLists.txt  calculate_ipldm_redmat.f90  ipldm_master.f90
mqds/src/mpi_src/: CMakeLists.txt  main_mpi.f90  mpi_variables.f90
mqds/src/mpi_src/equilibrium_src/: CMakeLists.txt  calculate_equilibrium_site_mpi.f90  equilibrium_master_mpi.f90
mqds/src/mpi_src/ipldm_src/: CMakeLists.txt  calculate_ipldm_redmat_mpi.f90  ipldm_master_mpi.f90
mqds/src/mpi_src/pldm_src/: CMakeLists.txt  calculate_pldm_absorption_mpi.f90  calculate_pldm_nonlinear_mpi.f90  calculate_pldm_redmat_maphop2_mpi.f90  calculate_pldm_redmat_maphop_mpi.f90  calculate_pldm_redmat_mpi.f90  pldm_master_mpi.f90
mqds/src/mpi_src/redfield_src/: CMakeLists.txt  calculate_redfield_rates_mpi.f90  redfield_master_mpi.f90
mqds/src/mpi_src/sqc_src/: CMakeLists.txt  calculate_sqc_absorption_mpi.f90  calculate_sqc_redmat_mpi.f90  sqc_master_mpi.f90
mqds/src/mpi_src/twa_src/: CMakeLists.txt  calculate_twa_redmat_mpi.f90  twa_master_mpi.f90
mqds/src/pldm_src/: CMakeLists.txt  calculate_pldm_absorption.f90  calculate_pldm_nonlinear.f90  calculate_pldm_redmat.f90  calculate_pldm_redmat_maphop.f90  calculate_pldm_redmat_maphop2.f90  pldm_master.f90  windows.f90
mqds/src/sqc_src/: CMakeLists.txt  calculate_sqc_absorption.f90  calculate_sqc_redmat.f90  sqc_master.f90
mqds/src/surface_hopping_src/: CMakeLists.txt  calcular_surface_hopping_redmat.f90  surface_hopping_master.f90
mqds/src/test/: continuumsd.in  mqds  pldm.1-1  pldm.1-1_old  pldm.1-2  pldm.2-1  pldm.2-2  processed_run.in  processed_run.in~  run.in~  test
mqds/src/twa_src/: CMakeLists.txt  calculate_twa_redmat.f90  twa_master.f90
run/: README.md  __init__.py
test/: CMakeLists.txt  continuumsd.in  couplings.in  dipole.in  processed_run.in  run.in  test_focusing.f90  test_hamiltonians.f90  test_harmonic_bath.f90  test_input_output.f90  test_kinds.f90  test_mapping_variables.f90  test_random_numbers.f90  test_spectroscopy.f90  test_unit_conversions.f90  test_windows.f90
(+64 files in other folders)
